# kanduit-projects

./: .gitignore  README.md
.devcontainer/: devcontainer.json
docs/: README.md  index.html
docs/css/: style.css
docs/flood-warning-platform/: index.html
docs/flood-warning-platform/css/: style.css
docs/flood-warning-platform/data/: gauge_readings.json  municipalities.geojson  (+1 more)
docs/kommunalatlas-nrw/: README.md  index.html
docs/scripts/: generate_data.py
portfolio/energiewende-nrw/: .gitignore  README.de.md  README.md  energiewende_nrw_dashboard_6c8295e3.plan.md  pyproject.toml  requirements.txt
portfolio/energiewende-nrw/.streamlit/: config.toml
portfolio/energiewende-nrw/app/: Startseite.py
portfolio/energiewende-nrw/app/pages/: 1_Karte.py  2_Ausbautracker.py  3_Gemeinderanking.py  4_Lueckenanalyse.py  5_Energiemonitoring.py
portfolio/energiewende-nrw/data/deploy/: nrw_combustion.parquet  nrw_wind.parquet  smard_generation.parquet
portfolio/energiewende-nrw/data/reference/: nrw_gemeinden.geojson  targets.json
portfolio/energiewende-nrw/scripts/: download_geodata.py  ingest.py  prepare_deploy.py  process.py
portfolio/energiewende-nrw/src/: bootstrap.py  branding.py  config.py
portfolio/energiewende-nrw/src/ingest/: mastr.py  smard.py
portfolio/energiewende-nrw/src/processing/: scorecard.py  targets.py  transform.py
portfolio/flood-warning-platform/: README.de.md  README.md  pixi.toml
portfolio/kommunalatlas-nrw/: index.html
portfolio/nrw-bridge-dashboard/: README.de.md  README.md  index.html  nrw_bridge_dashboard_541b80ec.plan.md
(+23 files in other folders)
